--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         </section>
     </main>
     <!-- main end -->
-    
+    <script src="js/blog.js"></script>
     <script src="js/changing-style.js"></script>
     <script src="js/calculation.js"></script>
 </body>
