--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Geometry Genius</title>
+    <title>Formula Mastermind</title>
     <!-- tailwindCSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- font awesome link -->
@@ -17,7 +17,7 @@
     <header class="md:flex justify-between bg-blue-200 py-2 px-5 mt-8 rounded-lg mx-2">
         <div>
             <h2 class="text-5xl font-semibold">Interactive </h2>
-            <h2 class="text-2xl text-slate-500">Geometry Genius</h2>
+            <h2 class="text-2xl text-slate-500">Formula Mastermind</h2>
         </div>
         <button class="text-white bg-blue-700 px-6 my-5 rounded-lg" id="btn-blog">Blog</button>
     </header>
